# fabricate

./: CLAUDE.md  Cargo.toml  README.md
src/: association.rs  builder.rs  cli.rs  context.rs  factory.rs  lib.rs  persona.rs  sequence.rs  traits.rs
src/ridemate/: driver.rs  mod.rs  payment.rs  personas.rs  rating.rs  ride.rs  safety.rs  trip.rs  user.rs
tests/: factory_test.rs
typescript/: package.json  tsconfig.json
typescript/src/: api-client.ts  factory.ts  index.ts  types.ts
