[package]
name = "fabricate"
version = "0.1.0"
edition = "2021"
description = "FactoryBot-inspired test data factory for Rust + sqlx"
license = "MIT"
repository = "https://github.com/ikennaokpala/fabricate"
keywords = ["testing", "factory", "fixtures", "sqlx", "database"]
categories = ["development-tools::testing"]

[lib]
name = "fabricate"
path = "src/lib.rs"

[[bin]]
name = "fabricate"
path = "src/cli.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["postgres"]
postgres = ["dep:sqlx"]

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
